# triangle

./: .gitignore  CMakeLists.txt  showme.cpp  triangle.cpp
